--- a/templates/landing.html
+++ b/templates/landing.html
@@ -186,7 +186,7 @@
             flex-direction: column;
             flex-wrap: nowrap;
             align-items: center;
-            margin-bottom: -200px;
+            margin-bottom: auto;
             position: relative;
             z-index: 1;
         }
