--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChartWitch - Medical Note Automation</title>
+    <title>ChartWitch : Copy-Paste & Automate Medical Notes & Clinical Decisions</title>
     <link href="{{ url_for('static', filename='fonts/verdana.ttf') }}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
@@ -27,7 +27,7 @@
     </div>
     <div class="textarea-container">
         <div class="input-container">
-            <textarea id="inputText" placeholder="Enter your medical notes here..."></textarea>
+            <textarea id="inputText" placeholder="Copy-Paste medical notes here..."></textarea>
             <div class="input-actions">
                 <button id="sample-1" class="input-action-button">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="output-container">
-            <textarea id="outputText" placeholder="Processed notes will appear here..." readonly></textarea>
+            <textarea id="outputText" placeholder="Processed output will appear here..." readonly></textarea>
             <div class="output-actions">
                 <button id="copy-output" class="output-action-button">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
