--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChartWitch - Copy-Paste & Automate Medical Notes</title>
+    <title>ChartWitch: Copy-Paste & Automate Medical Notes & Clinical Decisions</title>
+    <meta property="og:image" content="{{ url_for('static', filename='Logo_Share_500_by_250.svg') }}">
     
     <!-- Preconnect to third-party domains -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
