--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChartWitch: Copy-Paste & Automate Medical Notes & Clinical Decisions</title>
-    <meta property="og:image" content="{{ url_for('static', filename='Logo_Share_500_by_250.svg') }}">
+    <meta property="og:image" content="../static/Logo_Share_500_by_250.svg">
     <meta property="og:title" content="ChartWitch: Copy-Paste & Automate Medical Notes & Clinical Decisions" />
     <meta property="og:description" content="Revolutionize & Accelerate your Clinical Documentation & Decisions with simple HIPAA-Compliant Desktop App" />
     
