--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChartWitch : Copy-Paste & Automate Medical Notes & Clinical Decisions</title>
+    
+    <meta property="og:image" content="../static/Logo_Share_500_by_250.svg">
+    <meta property="og:title" content="ChartWitch: Copy-Paste & Automate Medical Notes & Clinical Decisions" />
+    <meta property="og:description" content="Revolutionize & Accelerate your Clinical Documentation & Decisions with simple HIPAA-Compliant Desktop App" />
+    
     <link href="{{ url_for('static', filename='fonts/verdana.ttf') }}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
