--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChartWitch: Copy-Paste & Automate Medical Notes & Clinical Decisions</title>
+    <title>Copy-Paste & Automate Medical Notes & Clinical Decisions</title>
     <meta property="og:image" content="../static/OG_Logo_Share.svg">
     <meta property="og:title" content="ChartWitch: Copy-Paste & Automate Medical Notes & Clinical Decisions" />
     <meta property="og:description" content="Revolutionize & Accelerate your Clinical Documentation & Decisions with simple HIPAA-Compliant Desktop App" />
