--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChartWitch : Copy-Paste & Automate Medical Notes & Clinical Decisions</title>
-    
-    <meta property="og:image" content="../static/Logo_Share_500_by_250.svg">
-    <meta property="og:title" content="ChartWitch: Copy-Paste & Automate Medical Notes & Clinical Decisions" />
-    <meta property="og:description" content="Revolutionize & Accelerate your Clinical Documentation & Decisions with simple HIPAA-Compliant Desktop App" />
+    <title>Copy-Paste & Automate Clinical Notes, Signouts, Summaries & Decisions</title>
+   
+    <meta property="og:image" content="../static/OG_Logo_Share.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:url" content="https://chartwitch.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Copy-Paste & Automate Clinical Notes, Signouts, Summaries & Decisions" />
+    <meta property="og:description" content="Revolutionize & Accelerate your Clinical Notes & Decisions with this simple HIPAA-Compliant Desktop App" />
     
     <link href="{{ url_for('static', filename='fonts/verdana.ttf') }}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
