--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Copy-Paste & Automate Clinical Notes, Signouts, Summaries & Decisions</title>
-    <meta property="og:image" content="../static/OG_Logo_Share.svg" />
+    <meta property="og:image" content="../static/OG_Logo_Share.jpg" />
     <meta property="og:title" content="Copy-Paste & Automate Clinical Notes, Signouts, Summaries & Decisions" />
     <meta property="og:description" content="Revolutionize & Accelerate your Clinical Notes & Decisions with this simple HIPAA-Compliant Desktop App" />
     
