--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="output-container">
-            <textarea id="outputText" placeholder="Processed output will appear here..." readonly></textarea>
+            <textarea id="outputText" placeholder="Processed output will appear here...&#10; Re-Click Button for a different version of output" readonly></textarea>
             <div class="output-actions">
                 <button id="copy-output" class="output-action-button">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
