--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             <img id="light-logo" class="logo light-mode-logo" src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo">
         </div>
         <div class="user-greeting">
-            <span id="user-greeting" class="greeting-text">Hello! 😀</span>
+            <span id="user-greeting" class="greeting-text">Howdy 😀</span>
         </div>
         <div class="header-actions">
             <button id="theme-toggle"></button>
