--- a/templates/landing.html
+++ b/templates/landing.html
@@ -447,7 +447,8 @@
             <div class="hero-section">
                 <div class="hero-content">
                     <h1>Transform Your <span class="highlight">Clinical Documentation & Decisions</span> using the magic of AI</h1>
-                    <p>ChartWitch can automate routing clinical documentation & help with decisions, differentials, prognosis, billing assitance and more using copy-pasted notes & data from the EMR. Improve your efficiency & reduce burnout </p>
+                    <p>ChartWitch automates clinical documentation & improves clinical decision-making, communication, billing and more. 
+                    <br>Improve work efficiency & reduce burnout </p>
                     <div class="cta-buttons">
                         <a href="#features" class="primary-btn">Learn More</a>
                         <a href="#demo-video" class="secondary-btn">Free Demo</a>
