--- a/templates/landing.html
+++ b/templates/landing.html
@@ -446,9 +446,9 @@
         <main>
             <div class="hero-section">
                 <div class="hero-content">
-                    <h1>Transform Your <span class="highlight">Clinical Documentation & Decisions</span> using the magic of AI</h1>
-                    <p>ChartWitch automates clinical documentation & improves clinical decision-making, communication, billing and more. 
-                    <br>Improve work efficiency & reduce burnout </p>
+                    <h1>Transform Your <span class="highlight">Clinical Work-Life Balance</span> using the Magic of AI</h1>
+                    <p>Automate clinical documentation, communications, analysis, decisions, billing assistance and more... 
+                    <br>Improve your efficiency & reduce burnout! </p>
                     <div class="cta-buttons">
                         <a href="#features" class="primary-btn">Learn More</a>
                         <a href="#demo-video" class="secondary-btn">Free Demo</a>
