--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Copy-Paste & Automate Clinical Notes, Signouts, Summaries & Decisions</title>
+    <title>EMR Assistant to Automate Clinical Notes, Summaries, Decisions & More...</title>
     <meta property="og:image" content="../static/OG_Logo_Share.jpg" />
-    <meta property="og:title" content="Copy-Paste & Automate Clinical Notes, Signouts, Summaries & Decisions" />
-    <meta property="og:description" content="Revolutionize & Accelerate your Clinical Notes & Decisions with this simple HIPAA-Compliant Desktop App" />
+    <meta property="og:title" content="EMR Assistant to Automate Clinical Notes, Summaries, Decisions & More..." />
+    <meta property="og:description" content="Revolutionize & Accelerate your Clinical Notes & Decisions with this HIPAA-Compliant Desktop App" />
     
     <!-- Preconnect to third-party domains -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
