--- a/templates/landing.html
+++ b/templates/landing.html
@@ -589,7 +589,7 @@
                         <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo" width="150" height="35">
                         <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
                     </div>
-                    <p>ChartWitch - Automate Medical Notes</p>
+                    <p>Copy-Paste & Automate</p>
                 </div>
                 <!-- Update the Quick Links section in the footer -->
                 <div id="contact" class="footer-links">
