--- a/templates/landing.html
+++ b/templates/landing.html
@@ -465,17 +465,17 @@
                     <div class="feature-card">
                         <i class="fas fa-file-medical"></i>
                         <h3>Signouts</h3>
-                        <p>Generate concise signout notes to use as hand-off</p>
+                        <p>Generate concise signout notes to use for patient hand-off</p>
                     </div>
                      <div class="feature-card">
                         <i class="fa-solid fa-notes-medical"></i>
                         <h3>H & P</h3>
-                        <p>Create a History & Physical using ER & Transfer Notes</p>
+                        <p>Create a History & Physical quicky using ER & Transfer Notes</p>
                     </div>
                     <div class="feature-card">
                         <i class="fas fa-hospital"></i>
                         <h3>Hospital Course</h3>
-                        <p>Generate a chronological hospital course summary for your patient </p>
+                        <p>Generate a chronological & logical hospital course summary for your patient </p>
                     </div>
                     <div class="feature-card">
                         <i class="fas fa-clipboard-list"></i>
