--- a/templates/landing.html
+++ b/templates/landing.html
@@ -347,7 +347,7 @@
                 flex-direction: column;
                 flex-wrap: nowrap;
                 align-items: center;
-                margin-bottom: 30px;
+                margin-bottom: 10px;
                 position: relative;
                 z-index: 1;
         }
@@ -356,8 +356,8 @@
                 display: flex;
                 flex-direction: column; /* Stack text above image */
                 align-items: center;
-                padding: 20px;
-                padding-top: 80px;
+                padding: 10px;
+                padding-top: 20px;
             }
             
             .hero-content {
@@ -446,8 +446,8 @@
         <main>
             <div class="hero-section">
                 <div class="hero-content">
-                    <h1>An EMR assistant to <span class="highlight">Transform Your Clinical Work-Life Balance</span> using the Magic of AI</h1>
-                    <p>ChartWitch is a HIPAA-Compliant Desktop Application designed by a Hospitalist for all Healthcare providers to automate clinical documentation, decisions, communication, education, billing assistance & more... </p>
+                    <h1>Transform Your Clinical Work-Life Balance with<span class="highlight">AI Automation Magic</span> on Copy-Pasted Medical Notes</h1>
+                    <p>ChartWitch is a HIPAA-Compliant Web-based Application designed by a Hospitalist for Healthcare workers to automate documentation, analysis, decisions, communication, education, billing assistance & more... </p>
                     <div class="cta-buttons">
                         <a href="#features" class="primary-btn">Learn More</a>
                         <a href="#demo-video" class="secondary-btn">Demo</a>
