--- a/templates/landing.html
+++ b/templates/landing.html
@@ -446,8 +446,8 @@
         <main>
             <div class="hero-section">
                 <div class="hero-content">
-                    <h1>Transform Your Clinical Work-Life Balance with<span class="highlight">AI Automation Magic</span> on Copy-Pasted Medical Notes</h1>
-                    <p>ChartWitch is a HIPAA-Compliant Web-based Application designed by a Hospitalist for Healthcare workers to automate documentation, analysis, decisions, communication, education, billing assistance & more... </p>
+                    <h1>Transform Clinical Efficiency via <span class="highlight">AI Magic</span> on <span class="highlight">Copy-Pasted</span> Medical Notes</h1>
+                    <p>ChartWitch is a HIPAA-Compliant, Web-based EMR Assistant designed by a Hospitalist to help Healthcare workers reclaim time, reduce burnout, and restore balance. It applies AI Automation on copy-pasted medical notes to quicken documentation, analysis, communication, billing & more! </p>
                     <div class="cta-buttons">
                         <a href="#features" class="primary-btn">Learn More</a>
                         <a href="#demo-video" class="secondary-btn">Demo</a>
