--- a/templates/landing.html
+++ b/templates/landing.html
@@ -446,8 +446,8 @@
         <main>
             <div class="hero-section">
                 <div class="hero-content">
-                    <h1>Transform Clinical Efficiency via <span class="highlight">AI Magic</span> on <span class="highlight">Copy-Pasted</span> Medical Notes</h1>
-                    <p>ChartWitch is a HIPAA-Compliant, Web-based EMR Assistant designed by a Hospitalist to help Healthcare workers reclaim time, reduce burnout, and restore balance. It applies AI Automation on copy-pasted medical notes to quicken documentation, analysis, communication, billing & more! </p>
+                    <h1>Upgrade your Clinical Efficiency via <span class="highlight">AI Magic</span> on <span class="highlight">Copy-Pasted</span> Medical Notes</h1>
+                    <p>ChartWitch is a HIPAA-compliant, Web-based EMR Assistant that uses AI Automation on Copy-Pasted Medical notes for faster Documentation, Analysis, Communication & more! Designed by a Hospitalist to boost Clinical Accuracy & Productivity of Healthcare providers while reducing burnout!</p>
                     <div class="cta-buttons">
                         <a href="#features" class="primary-btn">Learn More</a>
                         <a href="#demo-video" class="secondary-btn">Demo</a>
