--- a/templates/landing.html
+++ b/templates/landing.html
@@ -447,7 +447,8 @@
             <div class="hero-section">
                 <div class="hero-content">
                     <h1>Upgrade your Clinical Efficiency via <span class="highlight">AI Magic</span> on <span class="highlight">Copy-Pasted</span> Medical Notes</h1>
-                    <p>ChartWitch is a HIPAA-compliant, Web-based EMR Assistant that uses AI Automation on Copy-Pasted Medical notes for faster Documentation, Analysis, Communication & more! Designed by a Hospitalist to boost Clinical Accuracy & Productivity of Healthcare providers while reducing burnout!</p>
+                    <p>ChartWitch is a HIPAA-compliant, Web-based EMR Assistant that deploys AI Automation on Copy-Pasted Medical notes for faster Documentation, Communication, Medical Analysis & more!</p>
+                    <p style="color: grey;"> Designed by a Hospitalist, our goal is to boost Clinical Accuracy & Productivity of Healthcare workers and reduce Burnout!</p>
                     <div class="cta-buttons">
                         <a href="#features" class="primary-btn">Learn More</a>
                         <a href="#demo-video" class="secondary-btn">Demo</a>
