--- a/templates/landing.html
+++ b/templates/landing.html
@@ -448,7 +448,7 @@
                 <div class="hero-content">
                     <h1>Upgrade your Clinical Efficiency via <span class="highlight">AI Magic</span> on <span class="highlight">Copy-Pasted</span> Medical Notes</h1>
                     <p>ChartWitch is a HIPAA-compliant, Web-based EMR Assistant that deploys AI Automation on Copy-Pasted Medical notes for faster Documentation, Communication, Medical Analysis & more!</p>
-                    <p style="color: grey;"> Designed by a Hospitalist, our goal is to boost Clinical Accuracy & Productivity of Healthcare workers and reduce Burnout!</p>
+                    <p style="color: grey;"> Designed by a Hospitalist, our goal is to boost Clinical Accuracy & Productivity of Healthcare workers while reducing Burnout!</p>
                     <div class="cta-buttons">
                         <a href="#features" class="primary-btn">Learn More</a>
                         <a href="#demo-video" class="secondary-btn">Demo</a>
@@ -490,14 +490,19 @@
                         <p>Convert poorly written progress notes into readable documentation</p>
                     </div>
                     <div class="feature-card">
-                        <i class="fas fa-heartbeat"></i>
-                        <h3>Extract Billable Diagnoses</h3>
-                        <p>Automatically identify & enlist billable diagnoses from patient notes & reports</p>
-                    </div>
-                    <div class="feature-card">
                         <i class="fas fa-exclamation-triangle"></i>
                         <h3>Predict Emergencies</h3>
                         <p>Analyze progress notes to identify in-context emergency scenarios possible for your patient</p>
+                    </div>
+                    <div class="feature-card">
+                        <i class="fa-solid fa-comments-dollar"></i>
+                        <h3>Billing Assistance</h3>
+                        <p>Identify billable diagnoses, Analyze & advise on inpatient v/s observation appropriateness</p>
+                    </div>
+                    <div class="feature-card">
+                        <i class="fa-solid fa-plus"></i>
+                        <h3>Regular Updates</h3>
+                        <p>New smart features & capabilities will be added on a regular basis</p>
                     </div>
                 </div>
             </div>
@@ -519,7 +524,7 @@
                             <div class="step-number">2</div>
                             <div class="step-content">
                                 <h3>Anonymization & Processing</h3>
-                                <p>Patient data is de-indentified for HIPAA compliance</p>
+                                <p>Patient data is de-identified for HIPAA compliance</p>
                             </div>
                         </div>
                         <div class="step">
