--- a/templates/landing.html
+++ b/templates/landing.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EMR Assistant to Automate Clinical Notes, Summaries, Decisions & More...</title>
+    <title>EMR Assistant to Copy-Paste & Automate Medical Notes, Summaries, Analysis, Communication & More...</title>
     <meta property="og:image" content="../static/OG_Logo_Share.jpg" />
-    <meta property="og:title" content="EMR Assistant to Automate Clinical Notes, Summaries, Decisions & More..." />
+    <meta property="og:title" content="EMR Assistant to Copy-Paste & Automate Medical Notes, Summaries, Analysis, Communication & More..." />
     <meta property="og:description" content="Revolutionize & Accelerate your Clinical Notes & Decisions with this HIPAA-Compliant Desktop App" />
     
     <!-- Preconnect to third-party domains -->
