--- a/templates/landing.html
+++ b/templates/landing.html
@@ -427,9 +427,10 @@
             <!-- Dropdown Menu -->
             <div class="dropdown-menu">
                 <a href="/" class="dropdown-item">Home</a>
-                <a href="#about" class="dropdown-item">About</a>
+                <a href="#how_it_works" class="dropdown-item">How it Works</a>
                 <a href="/pricing" class="dropdown-item">Pricing</a>
                 <a href="/faq" class="dropdown-item">FAQ</a>
+                <a href="/aboutus" class="dropdown-item">About Us</a>
                 <a href="#contact" class="dropdown-item">Contact</a>
                 <a href="#demo-video" class="dropdown-item">Demo Video</a>
             </div>
@@ -506,7 +507,7 @@
                     </div>
                 </div>
             </div>
-            <div id="about" class="how-it-works-section">
+            <div id="how_it_works" class="how-it-works-section">
                 <h2>How ChartWitch Works</h2>
                 <div class="how-it-works-container">
                     <div class="how-it-works-video">
