--- a/templates/landing.html
+++ b/templates/landing.html
@@ -340,7 +340,7 @@
                 display: block;
                 cursor: pointer;
             }
-<!-- This is advice from ChatGPT -->
+/* Advice from ChatGPT */
 
          .main-logo {
                 display: flex;
@@ -368,7 +368,7 @@
                 max-width: 100%;
                 height: auto;
             }
-<!-- End of ChatGPT advice -->
+?* End of ChatGPT advice */
             .dropdown-menu {
                 width: 100%;
                 max-width: 300px;
@@ -594,7 +594,7 @@
                 <div class="footer-logo">
                     <div class="logo-container">
                         <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo" width="150" height="35">
-                        <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
+                        <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo" width="150" height="35">
                     </div>
                     <p>Copy-Paste & Automate</p>
                 </div>
