--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -446,7 +446,7 @@
 
 <h1>About Us</h1>
 
-<p>ChartWitch is a simple tool created to harness the power of Artificial Intelligence to solve the everyday frustrations of modern medical charting and tackle the ever-expanding cognitive burden of medical practice. Our goal is to give clinicians back the time and energy to focus on patient care and improve their work-life balance.</p>
+<p>ChartWitch is a simple tool created to harness the power of Artificial Intelligence to solve the everyday frustrations of modern medical charting and tackle the ever-expanding cognitive burden of medical practice. Our goal is to help clinicians make the most of their EMRs and give back & time and energy to focus on patient care and improve their work-life balance.</p>
 
 <h1>Our Vision</h1>
 
@@ -454,15 +454,15 @@
 
 <h1>Our Mission</h1>
 
-To empower healthcare workers by automating documentation, analysis, billing, communication, and education—turning copy-pasted notes into clear, structured, and reliable medical records with just a touch of AI magic.
+<p></p>To empower healthcare workers by harnessing the power of automation to improve various aspects of clinical workflow including documentation, comprehension, analysis, communication and more...</p>
 
 <h1>Why Trust Us ?</h1>
 
-<p>HIPAA-Compliant & Secure: Your data privacy and security are our top priority.</p>
+<p><h2>HIPAA-Compliant & Secure: </h2> Your data privacy and security are our top priority.</p>
 
-<p>Powered by Google Gemini AI: Advanced, cutting-edge intelligence for precise, context-aware documentation</p>
+<p><h2>Powered by Google Gemini AI: </h2> Advanced, cutting-edge intelligence for precise, context-aware documentation</p>
 
-<p>Designed by a clinician: Designed by a Hospitalist who understands the challenges & causes of healthcare burnout</p>
+<p><h2>Designed by a clinician: </h2>h3> Designed by a practicing Hospitalist physician who understands the challenges & causes of healthcare burnout</p>
 
                     <div class="cta-buttons">
                         <a href="/landing" class="primary-btn">Home</a>
@@ -534,3 +534,4 @@ To empower healthcare workers by automating documentation, analysis, billing, co
     <script src="{{ url_for('static', filename='landing.js') }}" defer></script>
 </body>
 </html>
+
