--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -466,7 +466,7 @@
 
                     <div class="cta-buttons">
                         <a href="/landing" class="primary-btn">Home</a>
-                        <a href="#demo-video" class="secondary-btn">FAQs</a>
+                        <a href="/faq" class="secondary-btn">FAQs</a>
                         <a href="/pricing" class="secondary-btn">View Pricing</a>
                     </div>
              </div>
@@ -534,4 +534,5 @@
     <script src="{{ url_for('static', filename='landing.js') }}" defer></script>
 </body>
 </html>
+
 
