--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -446,7 +446,7 @@
 
 <h1>About Us</h1>
 
-<p>ChartWitch is a simple tool created to harness the power of Artificial Intelligence to solve the everyday frustrations of modern medical charting and tackle the ever-expanding cognitive burden of medical practice. Our goal is to help clinicians make the most of their EMRs and give back & time and energy to focus on patient care and improve their work-life balance.</p>
+<p>ChartWitch is a simple tool created to harness the power of Artificial Intelligence to solve the everyday frustrations of modern medical charting and tackle the ever-expanding cognitive burden of medical practice. Our goal is to help clinicians make the most of their EMRs and give back time & energy to focus on patient care and improve their work-life balance.</p>
 
 <h1>Our Vision</h1>
 
@@ -534,5 +534,6 @@
     <script src="{{ url_for('static', filename='landing.js') }}" defer></script>
 </body>
 </html>
+
 
 
