--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -454,15 +454,15 @@
 
 <h1>Our Mission</h1>
 
-<p></p>To empower healthcare workers by harnessing the power of automation to improve various aspects of clinical workflow including documentation, comprehension, analysis, communication and more...</p>
+<p>To empower healthcare workers by harnessing the power of automation to improve various aspects of clinical workflow - including documentation, comprehension, analysis, communication & more...</p>
 
 <h1>Why Trust Us ?</h1>
 
-<p><h2>HIPAA-Compliant & Secure: </h2> Your data privacy and security are our top priority.</p>
+<h2>HIPAA-Compliant & Secure: </h2> <p>Your data privacy and security are our top priority.</p>
 
-<p><h2>Powered by Google Gemini AI: </h2> Advanced, cutting-edge intelligence for precise, context-aware documentation</p>
+<h2>Powered by Google Gemini AI: </h2> <p>Advanced, cutting-edge intelligence for precise, context-aware documentation</p>
 
-<p><h2>Designed by a clinician: </h2>h3> Designed by a practicing Hospitalist physician who understands the challenges & causes of healthcare burnout</p>
+<h2>Designed by a clinician: </h2> <p>Designed by a practicing physician who understands the limitations of current EMRs & causes of healthcare burnout</p>
 
                     <div class="cta-buttons">
                         <a href="/landing" class="primary-btn">Home</a>
@@ -534,6 +534,7 @@
     <script src="{{ url_for('static', filename='landing.js') }}" defer></script>
 </body>
 </html>
+
 
 
 
