--- a/templates/faq.html
+++ b/templates/faq.html
@@ -274,14 +274,14 @@
 <body>
     <!-- Navigation -->
     <nav>
-        <div class="logo-container">
+  <!--  <div class="logo-container">
             <img src="{{ url_for('static', filename='logo-dark.svg') }}" alt="ChartWitch Logo" class="logo dark-mode-logo">
-            <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo">
-        </div>
+            <img src="{{ url_for('static', filename='logo-light.svg') }}" alt="ChartWitch Logo" class="logo light-mode-logo"> 
+        </div> -->
         <div class="nav-buttons">
             <a href="/" class="nav-button">Home</a>
             <a href="/login" class="nav-button">Login</a>
-            <a href="/signup" class="nav-button signup-btn">Sign Up</a>
+    <!--   <a href="/signup" class="nav-button signup-btn">Sign Up</a>    -->
         </div>
     </nav>
     
