--- a/templates/faq.html
+++ b/templates/faq.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2SKGC3NMR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2SKGC3NMR');
+</script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FAQ - ChartWitch</title>
+    <title>ChartWitch FAQs</title>
     
     <!-- Preconnect to third-party domains -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
